--- a/source/sass/blocks/features.scss
+++ b/source/sass/blocks/features.scss
@@ -9,33 +9,33 @@
   @media (min-width: $vp-1200) {
     padding: 109px 182px;
   }
-}
 
-.features__title {
-  margin: 0;
-  padding: 0;
-  color: $price;
-  font-family: "Alumni Sans", "Arial", sans-serif;
-  line-height: normal;
-  text-align: center;
-  font-size: 32px;
-  font-weight: 600;
-  letter-spacing: 0.96px;
-  margin-left: -21px;
-  padding-bottom: 45px;
-
-  @media (min-width: $vp-768) {
-    font-size: 42px;
-    letter-spacing: 1.26px;
-    padding-bottom: 45px;
+  h2 {
+    margin: 0;
+    padding: 0;
+    color: $price;
+    font-family: "Alumni Sans", "Arial", sans-serif;
+    line-height: normal;
+    text-align: center;
+    font-size: 32px;
+    font-weight: 600;
+    letter-spacing: 0.96px;
     margin-left: -21px;
-  }
+    padding-bottom: 45px;
 
-  @media (min-width: $vp-1200) {
-    letter-spacing: 1.62px;
-    font-size: 54px;
-    padding-bottom: 48px;
-    padding-left: 21px;
+    @media (min-width: $vp-768) {
+      font-size: 42px;
+      letter-spacing: 1.26px;
+      padding-bottom: 45px;
+      margin-left: -21px;
+    }
+
+    @media (min-width: $vp-1200) {
+      letter-spacing: 1.62px;
+      font-size: 54px;
+      padding-bottom: 48px;
+      padding-left: 21px;
+    }
   }
 }
 
@@ -71,160 +71,84 @@
     gap: 30px;
     align-items: start;
   }
-
-  @media (min-width: $vp-1200) {
-    &:nth-of-type(1)::after,
-    &:nth-of-type(4)::after {
-      content: "";
-      position: absolute;
-      bottom: -75px;
-      left: -19px;
-      width: 106%;
-      height: 2px;
-      background: rgba(209, 10, 66, 0.2);
-    }
-
-    &:nth-of-type(4)::after {
-      left: 0;
-    }
-  }
 }
 
-.features__number {
-  margin: 0;
-  padding: 0;
-  font-size: 58px;
-  font-weight: 700;
-  line-height: 90%;
-  background: $red-blue-right;
-  background-clip: text;
-  -webkit-text-fill-color: transparent;
-
-  @media (min-width: $vp-768) {
+.features__wrapper {
+  h4 {
+    margin: 0;
+    padding: 0;
     font-size: 58px;
     font-weight: 700;
     line-height: 90%;
+    background: $red-blue-right;
+    background-clip: text;
+    -webkit-text-fill-color: transparent;
+
+    @media (min-width: $vp-768) {
+      font-size: 58px;
+      font-weight: 700;
+      line-height: 90%;
+    }
+
+    @media (min-width: $vp-1200) {
+      font-size: 71px;
+      font-weight: 700;
+    }
   }
 
-  @media (min-width: $vp-1200) {
-    font-size: 71px;
+  p {
+    margin: 0;
+    padding: 0;
+    font-size: 14px;
+    color: $percian-blue;
+    font-weight: 400;
+    line-height: 167%;
+    text-align: center;
+
+    @media (min-width: $vp-768) {
+      text-align: start;
+    }
+  }
+}
+
+.features__wrap {
+  h4 {
+    margin: 0;
+    padding: 0;
+    font-size: 20px;
     font-weight: 700;
-  }
-}
-
-.features__number-center {
-  margin: 0;
-  padding: 0;
-  line-height: 90%;
-  font-size: 74px;
-  font-weight: 700;
-  text-align: center;
-  color: $color-default-white;
-
-  @media (min-width: $vp-768) {
+    line-height: 150%;
+    color: $gym-color;
     text-align: center;
-    line-height: 113%;
-    padding-left: 36px;
+
+    @media (min-width: $vp-768) {
+      text-align: start;
+    }
+
+    @media (min-width: $vp-1200) {
+      font-size: 22px;
+      line-height: 170%;
+    }
   }
 
-  @media (min-width: $vp-1200) {
+  p {
+    margin: 0;
+    font-size: 16px;
+    color: $gym-color;
+    font-weight: 300;
+    line-height: 140%;
     text-align: center;
-    line-height: 124%;
-    padding-left: 27px;
-  }
-}
+    padding: 0 46px;
 
-.features__small-text {
-  margin: 0;
-  padding: 0;
-  font-size: 14px;
-  color: $percian-blue;
-  font-weight: 400;
-  line-height: 167%;
-  text-align: center;
+    @media (min-width: $vp-768) {
+      padding: 0;
+      text-align: start;
+      padding-right: 16px;
+    }
 
-  @media (min-width: $vp-768) {
-    text-align: start;
-  }
-}
-
-.features__subtitle {
-  margin: 0;
-  padding: 0;
-  font-size: 20px;
-  font-weight: 700;
-  line-height: 150%;
-  color: $gym-color;
-  text-align: center;
-
-  @media (min-width: $vp-768) {
-    text-align: start;
-  }
-
-  @media (min-width: $vp-1200) {
-    font-size: 22px;
-    line-height: 170%;
-  }
-}
-
-.features__text {
-  margin: 0;
-  font-size: 16px;
-  color: $gym-color;
-  font-weight: 300;
-  line-height: 140%;
-  text-align: center;
-  padding: 0 46px;
-
-  @media (min-width: $vp-768) {
-    padding: 0;
-    text-align: start;
-    padding-right: 16px;
-  }
-
-  @media (min-width: $vp-1200) {
-    padding: 0;
-  }
-}
-
-.features__text-center {
-  margin: 0;
-  font-size: 16px;
-  font-weight: 300;
-  line-height: 140%;
-  padding: 0 12px;
-  color: $color-default-white;
-  text-align: center;
-
-  @media (min-width: $vp-768) {
-    text-align: center;
-    padding: 0 2px;
-  }
-}
-
-.features__subtitle-center {
-  color: $color-default-white;
-  text-align: center;
-  letter-spacing: 1px;
-  margin: 0;
-  padding: 0;
-  font-size: 20px;
-  font-weight: 700;
-  line-height: 150%;
-
-  @media (min-width: $vp-768) {
-    text-align: center;
-    color: $color-default-white;
-    padding-bottom: 17px;
-  }
-
-  @media (min-width: $vp-1200) {
-    text-align: center;
-    color: $color-default-white;
-    padding-bottom: 30px;
-    letter-spacing: 2px;
-    font-size: 22px;
-    line-height: 170%;
+    @media (min-width: $vp-1200) {
+      padding: 0;
+    }
   }
 }
 
@@ -257,6 +181,71 @@
     margin-top: 8px;
     padding: 41px 34px;
   }
+
+  p {
+    margin: 0;
+    padding: 0;
+    line-height: 90%;
+    font-size: 74px;
+    font-weight: 700;
+    text-align: center;
+    color: $color-default-white;
+
+    @media (min-width: $vp-768) {
+      text-align: center;
+      line-height: 113%;
+      padding-left: 36px;
+    }
+
+    @media (min-width: $vp-1200) {
+      text-align: center;
+      line-height: 124%;
+      padding-left: 27px;
+    }
+  }
+}
+
+.features__wrap--center {
+  h4 {
+    color: $color-default-white;
+    text-align: center;
+    letter-spacing: 1px;
+    margin: 0;
+    padding: 0;
+    font-size: 20px;
+    font-weight: 700;
+    line-height: 150%;
+
+    @media (min-width: $vp-768) {
+      text-align: center;
+      color: $color-default-white;
+      padding-bottom: 17px;
+    }
+
+    @media (min-width: $vp-1200) {
+      text-align: center;
+      color: $color-default-white;
+      padding-bottom: 30px;
+      letter-spacing: 2px;
+      font-size: 22px;
+      line-height: 170%;
+    }
+  }
+
+  p {
+    margin: 0;
+    font-size: 16px;
+    font-weight: 300;
+    line-height: 140%;
+    padding: 0 12px;
+    color: $color-default-white;
+    text-align: center;
+
+    @media (min-width: $vp-768) {
+      text-align: center;
+      padding: 0 2px;
+    }
+  }
 }
 
 .features__item--places {
@@ -271,10 +260,10 @@
     grid-row-start: 2;
     position: relative;
 
-    &::after {
+    &::before {
       content: "";
       position: absolute;
-      bottom: -75px;
+      top: -75px;
       left: -19px;
       width: 106%;
       height: 2px;
@@ -308,16 +297,16 @@
     grid-column-start: 3;
     grid-row-start: 2;
     position: relative;
-  }
 
-  &::after {
-    content: "";
-    position: absolute;
-    bottom: -75px;
-    left: 0;
-    width: 106%;
-    height: 2px;
-    background: rgba(209, 10, 66, 0.2);
+    &::before {
+      content: "";
+      position: absolute;
+      top: -75px;
+      left: 0;
+      width: 106%;
+      height: 2px;
+      background: rgba(209, 10, 66, 0.2);
+    }
   }
 }
 
