--- a/source/sass/blocks/gym.scss
+++ b/source/sass/blocks/gym.scss
@@ -1,7 +1,7 @@
 .main-gym {
   position: relative;
   width: 100%;
-  max-width: 1920px;
+  max-width: 1440px;
   margin: 0 auto;
   padding-bottom: 70px;
 
@@ -26,92 +26,92 @@
     padding-left: 60px;
     max-width: 410px;
   }
-}
 
-.main-gym__title {
-  margin: 0;
-  padding: 0;
-  margin-top: 63px;
-  color: $gym-color;
-  font-family: "Alumni Sans", "Arial", sans-serif;
-  font-weight: 600;
-  line-height: normal;
-  padding-bottom: 5px;
-  padding-left: 16px;
-  font-size: 32px;
-  letter-spacing: 0.96px;
-
-  @media (min-width: $vp-768) {
-    margin-top: 100px;
-    font-size: 42px;
-    margin-right: 17px;
-    text-align: center;
-    padding-bottom: 0;
-    letter-spacing: 1.2px;
-  }
-
-  @media (min-width: $vp-1200) {
-    font-size: 48px;
-    letter-spacing: 1.44px;
-    padding-bottom: 6px;
-    padding-left: 0;
-    margin-top: 0;
-    text-align: start;
-  }
-}
-
-.main-gym__subtitle {
-  margin: 0;
-  padding: 0;
-  padding-bottom: 24px;
-  color: $gym-color;
-  font-size: 18px;
-  font-weight: 400;
-  line-height: 150%;
-  padding-left: 16px;
-
-  @media (min-width: $vp-768) {
-    text-align: center;
-    padding-bottom: 34px;
-  }
-
-  @media (min-width: $vp-1200) {
-    padding-bottom: 39px;
-    padding-left: 0;
-    text-align: start;
-  }
-}
-
-.main-gym__text {
-  margin: 0;
-  padding: 0;
-  padding-bottom: 33px;
-  margin-right: 44px;
-  color: $gym-color;
-  font-size: 16px;
-  font-weight: 300;
-  line-height: 150%;
-  padding-left: 16px;
-
-  &:last-of-type {
-    display: none;
-  }
-
-  @media (min-width: $vp-768) {
-    text-align: center;
+  h2 {
     margin: 0;
-    padding: 0 80px;
-    padding-bottom: 44px;
+    padding: 0;
+    margin-top: 63px;
+    color: $gym-color;
+    font-family: "Alumni Sans", "Arial", sans-serif;
+    font-weight: 600;
+    line-height: normal;
+    padding-bottom: 5px;
+    padding-left: 16px;
+    font-size: 32px;
+    letter-spacing: 0.96px;
+
+    @media (min-width: $vp-768) {
+      margin-top: 100px;
+      font-size: 42px;
+      margin-right: 17px;
+      text-align: center;
+      padding-bottom: 0;
+      letter-spacing: 1.2px;
+    }
+
+    @media (min-width: $vp-1200) {
+      font-size: 48px;
+      letter-spacing: 1.44px;
+      padding-bottom: 6px;
+      padding-left: 0;
+      margin-top: 0;
+      text-align: start;
+    }
   }
 
-  @media (min-width: $vp-1200) {
+  h3 {
+    margin: 0;
     padding: 0;
-    text-align: start;
+    padding-bottom: 24px;
+    color: $gym-color;
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 150%;
+    padding-left: 16px;
+
+    @media (min-width: $vp-768) {
+      text-align: center;
+      padding-bottom: 34px;
+    }
+
+    @media (min-width: $vp-1200) {
+      padding-bottom: 39px;
+      padding-left: 0;
+      text-align: start;
+    }
+  }
+
+  p {
+    margin: 0;
+    padding: 0;
+    padding-bottom: 33px;
+    margin-right: 44px;
+    color: $gym-color;
+    font-size: 16px;
+    font-weight: 300;
+    line-height: 150%;
+    padding-left: 16px;
 
     &:last-of-type {
-      display: block;
+      display: none;
+    }
+
+    @media (min-width: $vp-768) {
+      text-align: center;
+      margin: 0;
+      padding: 0 80px;
+      padding-bottom: 44px;
+    }
+
+    @media (min-width: $vp-1200) {
       padding: 0;
-      padding-top: 8px;
+      text-align: start;
+
+      &:last-of-type {
+        display: block;
+        padding: 0;
+        padding-top: 8px;
+      }
     }
   }
 }
@@ -225,12 +225,13 @@
   }
 
   &:hover,
-  &:focus {
-    background-image: url("../img/svg/video-btn-hover.svg");
+  &:focus,
+  &:active {
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100' height='100' viewBox='0 0 100 100' fill='none'%3E%3Ccircle cx='50' cy='50' r='49' stroke='%23102654' stroke-width='2'/%3E%3Ccircle cx='50' cy='50' r='36' fill='white'/%3E%3Cpath d='M59 49.5L46.25 56.8612L46.25 42.1388L59 49.5Z' fill='%23102654'/%3E%3C/svg%3E");
   }
 
   &:disabled {
-    background-image: url("../img/svg/video-btn-disabled.svg");
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100' height='100' viewBox='0 0 100 100' fill='none'%3E%3Cg opacity='0.4'%3E%3Ccircle cx='50' cy='50' r='49' stroke='%23102654' stroke-width='2'/%3E%3Ccircle cx='50' cy='50' r='36' fill='white'/%3E%3Cpath d='M59 49.5L46.25 56.8612L46.25 42.1388L59 49.5Z' fill='%23102654'/%3E%3C/g%3E%3C/svg%3E");
   }
 }
 
