--- a/source/sass/blocks/main-banner.scss
+++ b/source/sass/blocks/main-banner.scss
@@ -15,6 +15,10 @@
     background-image: conic-gradient(from 150.87deg at 16.03% 39.06%, #b80027 -46.69deg, #003d85 32.24deg, #b80027 313.31deg, #003d85 392.24deg);
     background-color: $percian-blue;
   }
+
+  @media (min-width: $vp-1440) {
+    justify-content: center;
+  }
 }
 
 .main-banner__wrapper {
@@ -32,34 +36,35 @@
     margin-left: 19px;
     padding-bottom: 96px;
   }
-}
 
-.main-banner__city {
-  margin: 0;
-  padding: 0;
-  font-size: 24px;
-  text-transform: uppercase;
-  text-align: end;
-  color: $color-default-white;
-  font-family: "Alumni Sans", "Arial", sans-serif;
-  font-style: normal;
-  font-weight: 600;
-  line-height: normal;
-  letter-spacing: 1.44px;
+  h3 {
+    margin: 0;
+    padding: 0;
+    font-size: 24px;
+    text-transform: uppercase;
+    text-align: end;
+    color: $color-default-white;
+    font-family: "Alumni Sans", "Arial", sans-serif;
+    font-style: normal;
+    font-weight: 600;
+    line-height: normal;
+    letter-spacing: 1.44px;
 
-  @media (min-width: $vp-768) {
-    font-size: 29px;
-    margin-right: 12px;
-  }
+    @media (min-width: $vp-768) {
+      font-size: 29px;
+      margin-right: 12px;
+    }
 
-  @media (min-width: $vp-1200) {
-    font-size: 44px;
-    margin-right: 55px;
+    @media (min-width: $vp-1200) {
+      font-size: 44px;
+      margin-right: 55px;
+    }
   }
 }
 
 .main-banner__block {
   display: flex;
+  justify-content: center;
 
   @media (min-width: $vp-768) {
     gap: 24px;
@@ -67,6 +72,33 @@
 
   @media (min-width: $vp-1200) {
     gap: 14px;
+  }
+
+  h1 {
+    margin: 0;
+    padding: 0;
+    margin-top: 13px;
+    color: $color-default-white;
+    text-align: right;
+    font-size: 72px;
+    font-family: "Alumni Sans", "Arial", sans-serif;
+    font-style: normal;
+    font-weight: 600;
+    line-height: normal;
+    letter-spacing: 3.6px;
+
+    @media (min-width: $vp-768) {
+      font-size: 74px;
+      margin-right: 0;
+      letter-spacing: 3.6px;
+      margin-top: 9px;
+      margin-left: 11px;
+    }
+
+    @media (min-width: $vp-1200) {
+      font-size: 96px;
+      text-transform: uppercase;
+    }
   }
 }
 
@@ -84,43 +116,16 @@
   @media (min-width: $vp-1200) {
     margin-top: 136px;
   }
-}
 
-.main-banner__item {
-  margin: 0;
-  padding: 0;
-  color: $color-default-white;
-  text-align: right;
-  font-size: 14px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 150%;
-}
-
-.main-banner__title {
-  margin: 0;
-  padding: 0;
-  margin-top: 13px;
-  color: $color-default-white;
-  text-align: right;
-  font-size: 72px;
-  font-family: "Alumni Sans", "Arial", sans-serif;
-  font-style: normal;
-  font-weight: 600;
-  line-height: normal;
-  letter-spacing: 3.6px;
-
-  @media (min-width: $vp-768) {
-    font-size: 74px;
-    margin-right: 0;
-    letter-spacing: 3.6px;
-    margin-top: 9px;
-    margin-left: 11px;
-  }
-
-  @media (min-width: $vp-1200) {
-    font-size: 96px;
-    text-transform: uppercase;
+  li {
+    margin: 0;
+    padding: 0;
+    color: $color-default-white;
+    text-align: right;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 150%;
   }
 }
 
@@ -150,8 +155,8 @@
 }
 
 .main-banner__button {
-  display: inline-block;
-  margin: 0;
+  display: flex;
+  justify-content: center;
   margin-top: 21px;
   padding: 21px 81px;
   color: $color-default-white;
