--- a/source/sass/blocks/promo.scss
+++ b/source/sass/blocks/promo.scss
@@ -11,31 +11,31 @@
     padding-top: 145px;
     padding-bottom: 120px;
   }
-}
 
-.promo__title {
-  margin: 0;
-  padding: 0;
-  color: $gym-color;
-  font-family: "Alumni Sans", "Arial", sans-serif;
-  font-size: 32px;
-  letter-spacing: 0.96px;
-  font-weight: 600;
-  line-height: normal;
-  text-align: center;
-  padding-bottom: 42px;
+  h2 {
+    margin: 0;
+    padding: 0;
+    color: $gym-color;
+    font-family: "Alumni Sans", "Arial", sans-serif;
+    font-size: 32px;
+    letter-spacing: 0.96px;
+    font-weight: 600;
+    line-height: normal;
+    text-align: center;
+    padding-bottom: 42px;
 
-  @media (min-width: $vp-768) {
-    font-size: 42px;
-    letter-spacing: 1.26px;
-    padding-right: 9px;
-    padding-bottom: 40px;
-  }
+    @media (min-width: $vp-768) {
+      font-size: 42px;
+      letter-spacing: 1.26px;
+      padding-right: 9px;
+      padding-bottom: 40px;
+    }
 
-  @media (min-width: $vp-1200) {
-    font-size: 54px;
-    letter-spacing: 1.62px;
-    padding-bottom: 34px;
+    @media (min-width: $vp-1200) {
+      font-size: 54px;
+      letter-spacing: 1.62px;
+      padding-bottom: 34px;
+    }
   }
 }
 
@@ -72,51 +72,51 @@
   color: $color-default-white;
   background: $torch-red;
   padding: 45px;
-}
 
-.promo__red-title {
-  margin: 0;
-  padding: 0;
-  font-size: 28px;
-  font-style: normal;
-  font-weight: 700;
-  line-height: 80%;
-  text-align: center;
+  h3 {
+    margin: 0;
+    padding: 0;
+    font-size: 28px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 80%;
+    text-align: center;
 
-  @media (min-width: $vp-768) {
-    text-align: start;
+    @media (min-width: $vp-768) {
+      text-align: start;
+    }
   }
-}
 
-.promo__red-price {
-  margin: 0;
-  padding: 0;
-  font-size: 70px;
-  font-style: normal;
-  font-weight: 700;
-  line-height: 121%;
-  padding-bottom: 6px;
-  text-align: center;
+  h4 {
+    margin: 0;
+    padding: 0;
+    font-size: 70px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 121%;
+    padding-bottom: 6px;
+    text-align: center;
 
-  @media (min-width: $vp-768) {
-    text-align: start;
-    padding-bottom: 10px;
+    @media (min-width: $vp-768) {
+      text-align: start;
+      padding-bottom: 10px;
+    }
   }
-}
 
-.promo__red-text {
-  margin: 0;
-  padding: 0;
-  font-size: 18px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 140%;
-  padding-bottom: 21px;
-  text-align: center;
+  p {
+    margin: 0;
+    padding: 0;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 140%;
+    padding-bottom: 21px;
+    text-align: center;
 
-  @media (min-width: $vp-768) {
-    text-align: start;
-    padding-bottom: 181px;
+    @media (min-width: $vp-768) {
+      text-align: start;
+      padding-bottom: 181px;
+    }
   }
 }
 
@@ -210,41 +210,41 @@
   @media (min-width: $vp-1200) {
     padding-right: 27px;
   }
-}
 
-.promo__block-title {
-  margin: 0;
-  padding: 0;
-  font-size: 26px;
-  font-weight: 700;
-  line-height: 150%;
-  text-align: center;
+  h4 {
+    margin: 0;
+    padding: 0;
+    font-size: 26px;
+    font-weight: 700;
+    line-height: 150%;
+    text-align: center;
 
-  @media (min-width: $vp-768) {
-    text-align: start;
-  }
-}
-
-.promo__block-text {
-  margin: 0;
-  padding: 0;
-  font-size: 16px;
-  font-weight: 400;
-  line-height: 140%;
-  padding-bottom: 24px;
-  text-align: center;
-
-  @media (min-width: $vp-768) {
-    padding-bottom: 44px;
-    text-align: start;
-
-    &--last {
-      padding-bottom: 67px;
+    @media (min-width: $vp-768) {
+      text-align: start;
     }
   }
 
-  @media (min-width: $vp-1200) {
-    padding-bottom: 68px;
+  p {
+    margin: 0;
+    padding: 0;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 140%;
+    padding-bottom: 24px;
+    text-align: center;
+
+    @media (min-width: $vp-768) {
+      padding-bottom: 44px;
+      text-align: start;
+
+      &:last-of-type {
+        padding-bottom: 67px;
+      }
+    }
+
+    @media (min-width: $vp-1200) {
+      padding-bottom: 68px;
+    }
   }
 }
 
