--- a/source/sass/blocks/review.scss
+++ b/source/sass/blocks/review.scss
@@ -1,6 +1,9 @@
-.review {
+.reviews {
   padding-top: 62px 15px 70px;
   position: relative;
+  padding-bottom: 120px;
+  max-width: 700px;
+  margin: 0 auto;
 
   @media (min-width: $vp-768) {
     padding-top: 92px;
@@ -11,166 +14,137 @@
     padding-top: 120px;
     padding-bottom: 115px;
   }
+
+  h2 {
+    margin: 0;
+    padding: 0;
+    color: $gym-color;
+    font-family: "Alumni Sans", "Arial", sans-serif;
+    font-size: 32px;
+    letter-spacing: 0.96px;
+    font-weight: 600;
+    line-height: normal;
+    text-align: center;
+    padding-bottom: 42px;
+
+    @media (min-width: $vp-768) {
+      font-size: 42px;
+      letter-spacing: 1.26px;
+      padding-right: 9px;
+      padding-bottom: 40px;
+    }
+
+    @media (min-width: $vp-1200) {
+      font-size: 54px;
+      letter-spacing: 1.62px;
+      padding-bottom: 37px;
+    }
+  }
 }
 
-.review__title {
-  margin: 0;
-  padding: 0;
-  color: $gym-color;
-  font-family: "Alumni Sans", "Arial", sans-serif;
-  font-size: 32px;
-  letter-spacing: 0.96px;
-  font-weight: 600;
-  line-height: normal;
-  text-align: center;
-  padding-bottom: 42px;
+.reviews__slider {
+  max-width: 71%;
 
   @media (min-width: $vp-768) {
-    font-size: 42px;
-    letter-spacing: 1.26px;
-    padding-right: 9px;
-    padding-bottom: 40px;
+    max-width: 81%;
   }
 
   @media (min-width: $vp-1200) {
-    font-size: 54px;
-    letter-spacing: 1.62px;
-    padding-bottom: 37px;
+    max-width: 560px;
   }
 }
 
-.review-swiper-wrapper {
+.reviews__slider.is-not-js .reviews__list {
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  gap: 40px;
+}
+
+.reviews__list {
   margin: 0 auto;
   padding: 0;
   list-style-type: none;
 }
 
-.review-swiper__container {
-  max-width: 226px;
-  display: flex;
-  flex-direction: column;
+.reviews__item {
+  padding: 40px 25px 36px;
+  max-width: 100%;
   background-color: $resolution-blue;
-  padding: 40px 25px;
-  margin: 0 auto;
-  padding-bottom: 33px;
+  box-shadow: 0 0 40px rgb(28, 51, 116, 0.2);
 
   @media (min-width: $vp-768) {
+    padding: 55px 65px 57px;
+  }
+
+  @media (min-width: $vp-1200) {
+    padding: 54px 62px 57px;
     max-width: 560px;
-    padding: 62px;
-    flex-direction: row;
-    gap: 28px;
-    filter: drop-shadow(0 0 40px rgba(28, 51, 116, 0.2));
   }
 }
 
-.review-swiper__wrap {
-  display: flex;
-  gap: 15px;
-  align-items: center;
-  padding-bottom: 15px;
-}
-
-.review__image {
-  margin-left: 18px;
-  width: 67px;
-  height: 67px;
-
-  @media (min-width: $vp-768) {
-    margin: 0;
-    width: 80px;
-    height: 80px;
-  }
-}
-
-.review__name {
-  margin: 0;
-  padding: 0 0 16px;
-  color: $color-default-white;
-  font-size: 20px;
-  font-weight: 700;
-  line-height: 87%;
-  display: none;
-
-  @media (min-width: $vp-768) {
-    margin: 0;
-    padding: 0 0 16px;
-    color: $color-default-white;
-    font-size: 20px;
-    font-weight: 700;
-    line-height: 87%;
-    display: block;
-  }
-
-  &--phone {
-    display: block;
-    padding-top: 9px;
-    padding-bottom: 9px;
-    line-height: 125%;
-
-    @media (min-width: $vp-768) {
-      display: none;
-    }
-  }
-}
-
-.review__text {
+.reviews__item blockquote {
   margin: 0;
   padding: 0;
-  max-width: 328px;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: repeat(2, auto);
+  gap: 15px;
+
+  @media (min-width: $vp-768) {
+    grid-template-columns: 80px 1fr;
+    column-gap: 28px;
+    row-gap: 11px;
+  }
+}
+
+.reviews__image-wrapper {
+  margin: 0 0 0 14px;
+  width: 68px;
+  height: 68px;
+  grid-row: 1/2;
+  justify-self: flex-end;
+
+  @media (min-width: $vp-768) {
+    width: 80px;
+    height: 80px;
+    justify-self: flex-start;
+    grid-row: 1/3;
+  }
+
+  @media (min-width: $vp-1200) {
+    margin: 7px 0 0 0;
+  }
+}
+
+.reviews__image {
+  height: 100%;
+  border-radius: 50%;
+  object-fit: cover;
+}
+
+.reviews__item h3 {
+  margin: 8px 0 0 3px;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 26px;
   color: $color-default-white;
+
+  @media (min-width: $vp-1200) {
+    margin: 0;
+  }
+}
+
+.reviews__item p {
+  margin: 0;
   font-size: 16px;
-  font-weight: 400;
-  line-height: 140%;
+  line-height: 22px;
+  color: $color-default-white;
+  grid-column: 1/3;
   text-align: center;
 
   @media (min-width: $vp-768) {
+    grid-column: 2/4;
     text-align: start;
-  }
-}
-
-.review__button {
-  position: absolute;
-  top: 49.5%;
-  width: 14px;
-  height: 32px;
-
-  & svg {
-    fill: none;
-  }
-
-  @media (min-width: $vp-768) {
-    top: 55.5%;
-    width: 18px;
-    height: 32px;
-  }
-
-  @media (min-width: $vp-1200) {
-    top: 53.5%;
-  }
-}
-
-.review__button-prev {
-  left: 15px;
-
-  @media (min-width: $vp-768) {
-    left: 6%;
-  }
-
-  @media (min-width: $vp-1200) {
-    left: 25%;
-  }
-}
-
-.review__button-next {
-  right: 15px;
-
-  @media (min-width: $vp-768) {
-    right: 6%;
-  }
-
-  @media (min-width: $vp-1200) {
-    right: 25%;
   }
 }
