--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -2,10 +2,9 @@
 // ---------------------------------
 
 @import "vendor/normalize";
-@import "data-tabs.scss";
-@import "tabs.scss";
-@import "data-accordion.scss";
-@import "accordion.scss";
+@import "data-tabs";
+@import "data-accordion";
+
 // Swiper 7.4.1
 @import "vendor/swiper";
 // Global
@@ -22,9 +21,6 @@
 
 @import "blocks/btn";
 @import "blocks/modal";
-@import "blocks/custom-input";
-@import "blocks/custom-toggle";
-@import "blocks/custom-select";
 @import "blocks/header";
 @import "blocks/footer";
 @import "blocks/main-banner";
@@ -37,7 +33,11 @@
 @import "blocks/promo";
 @import "blocks/faq";
 @import "blocks/review";
-@import "blocks/contacts-form";
+@import "blocks/contacts";
+@import "blocks/free-class";
+@import "blocks/slider-controls";
+@import "blocks/accordion";
+@import "blocks/tabs";
 
 // ---------------------------------
 
