--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -26,7 +26,7 @@ $dark-grey: #74819c;
 // Gradient
 
 $black-to-right: linear-gradient(90deg, rgba(0, 0, 0, 0.75) 0%, rgba(0, 0, 0, 0) 75%);
-$red-blue-right: linear-gradient(to right bottom, #d10a42, #00359f);
+$red-blue-right: linear-gradient(90deg, #d10a42, #00359f);
 
 // Typography
 // ---------------------------------
@@ -59,6 +59,7 @@ $vp-375: 375px;
 $vp-768: 768px;
 $vp-1024: 1024px;
 $vp-1200: 1200px;
+$vp-1366: 1366px;
 $vp-1440: 1440px;
 $vp-1920: 1920px;
 
