--- a/css/style.css
+++ b/css/style.css
@@ -2638,6 +2638,12 @@ button,
   gap: 5px;
 }
 
+.features__wrapper {
+  -ms-flex-item-align: center;
+  -ms-grid-row-align: center;
+  align-self: center;
+}
+
 .features__wrapper h4 {
   margin: 0;
   padding: 0;
@@ -2692,6 +2698,7 @@ button,
   grid-row-start: 3;
   padding: 50px 30px;
   padding-top: 40px;
+  text-align: center;
 }
 
 .features__item--center p {
@@ -2700,7 +2707,6 @@ button,
   line-height: 90%;
   font-size: 74px;
   font-weight: 700;
-  text-align: center;
   color: #ffffff;
 }
 
@@ -3991,9 +3997,7 @@ button,
   }
 
   .features__item--center p {
-    text-align: center;
     line-height: 113%;
-    padding-left: 36px;
   }
 
   .features__wrap--center h4 {
@@ -4675,9 +4679,7 @@ button,
   }
 
   .features__item--center p {
-    text-align: center;
     line-height: 124%;
-    padding-left: 27px;
   }
 
   .features__wrap--center h4 {
