--- a/source/sass/blocks/faq.scss
+++ b/source/sass/blocks/faq.scss
@@ -186,8 +186,14 @@
     padding-top: 32px;
   }
 
-  p {
+  span {
     margin: 0;
+    display: block;
+    width: 254px;
+
+    @media (min-width: $vp-768) {
+      width: auto;
+    }
   }
 }
 
