--- a/source/sass/blocks/main-banner.scss
+++ b/source/sass/blocks/main-banner.scss
@@ -52,7 +52,7 @@
 
     @media (min-width: $vp-768) {
       font-size: 29px;
-      margin-right: 12px;
+      margin-right: 7px;
     }
 
     @media (min-width: $vp-1200) {
@@ -126,6 +126,7 @@
     font-style: normal;
     font-weight: 400;
     line-height: 150%;
+    white-space: nowrap;
   }
 }
 
@@ -144,13 +145,14 @@
   @media (min-width: $vp-768) {
     min-width: 324px;
     min-height: 390px;
-    margin-left: 3px;
+    margin-left: -2px;
   }
 
   @media (min-width: $vp-1200) {
     margin-top: -30px;
     min-width: 500px;
     min-height: 556px;
+    margin-left: 3px;
   }
 }
 
