--- a/source/sass/blocks/promo.scss
+++ b/source/sass/blocks/promo.scss
@@ -132,6 +132,7 @@
   position: relative;
   left: 50%;
   transform: translate(-50%, 0);
+  user-select: none;
 
   &::after {
     content: "";
@@ -257,6 +258,7 @@
   position: relative;
   left: 50%;
   transform: translate(-50%, 0);
+  user-select: none;
 
   &::after {
     content: "";
