--- a/source/sass/blocks/footer.scss
+++ b/source/sass/blocks/footer.scss
@@ -35,6 +35,10 @@
   display: inline-block;
   padding-bottom: 14px;
 
+  &:hover {
+    opacity: 0.3;
+  }
+
   @media (min-width: $vp-768) {
     padding: 0;
   }
